Fix alignment of projects

--- a/app/assets/stylesheets/home_page_categories.css
+++ b/app/assets/stylesheets/home_page_categories.css
@@ -1,4 +1,4 @@
 
-.home-page-almost-funded {
+/*.home-page-almost-funded {
   padding: 20px;
-}
+}*/
